--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cep-promise": "^4.4.1",
     "date-fns": "^3.6.0",
     "esbuild": "^0.20.1",
     "inputmask": "^5.0.8",
