--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cep-promise": "^4.4.1",
+    "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "^3.6.0",
     "esbuild": "^0.20.1",
     "inputmask": "^5.0.8",
